# serialize_private_prod

./: CMakeLists.txt  README.md  main.cpp
cmake/: GoogleTest.cmake  Nlohmann.cmake
enc_temp_folder/9580b14db734eaa5677ab6ebcb2cc13/: serialize.hpp
serializator/: CMakeLists.txt  bufferstream.h  datatypes.h  serialize.cpp  serialize.hpp
tests/: CMakeLists.txt  test_main.cpp
